criar infos sobre git e ignorar pasta 'temp'

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-temp/
+temp/ 
+# acima ignora toda a pasta 'temp'
+
 # teste.txt = ignora o arquivo 'teste.txt'
 # *.css = ignora todos os arquivos .css
